--- a/lib32/lib32-gstreamer/.artixlinux/pkgbase.yaml
+++ b/lib32/lib32-gstreamer/.artixlinux/pkgbase.yaml
@@ -1,61 +1,63 @@
 ---
-pkgbase:
-  name: lib32-gstreamer
-  version: 1.26.1-1
-  arch:
-    - x86_64
-  pkgname:
-    - lib32-gstreamer
-    - lib32-gst-plugins-base-libs
-    - lib32-gst-plugins-base
-    - lib32-gst-plugins-good
 actions:
   addRepo: lib32
-  removeRepo: lib32-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
-    version: 1.26.1-1
+    version: 1.26.2-1
     packages:
-      - lib32-gstreamer-1.26.1-1-x86_64.pkg.tar.zst
-      - lib32-gst-plugins-base-libs-1.26.1-1-x86_64.pkg.tar.zst
-      - lib32-gst-plugins-base-1.26.1-1-x86_64.pkg.tar.zst
-      - lib32-gst-plugins-good-1.26.1-1-x86_64.pkg.tar.zst
+      - lib32-gstreamer-1.26.2-1-x86_64.pkg.tar.zst
+      - lib32-gst-plugins-base-libs-1.26.2-1-x86_64.pkg.tar.zst
+      - lib32-gst-plugins-base-1.26.2-1-x86_64.pkg.tar.zst
+      - lib32-gst-plugins-good-1.26.2-1-x86_64.pkg.tar.zst
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: lib32
