--- a/lib32/lib32-pipewire/.artixlinux/pkgbase.yaml
+++ b/lib32/lib32-pipewire/.artixlinux/pkgbase.yaml
@@ -1,14 +1,4 @@
 ---
-pkgbase:
-  name: lib32-pipewire
-  version: 1:1.4.2-1
-  arch:
-    - x86_64
-  pkgname:
-    - lib32-pipewire
-    - lib32-libpipewire
-    - lib32-pipewire-jack
-    - lib32-pipewire-v4l2
 actions:
   addRepo: lib32
   removeRepo: lib32-gremlins
@@ -21,41 +11,53 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
-    version: 1:1.4.2-1
+    version: 1:1.4.4-1
     packages:
-      - lib32-pipewire-1:1.4.2-1-x86_64.pkg.tar.zst
-      - lib32-libpipewire-1:1.4.2-1-x86_64.pkg.tar.zst
-      - lib32-pipewire-jack-1:1.4.2-1-x86_64.pkg.tar.zst
-      - lib32-pipewire-v4l2-1:1.4.2-1-x86_64.pkg.tar.zst
+      - lib32-pipewire-1:1.4.4-1-x86_64.pkg.tar.zst
+      - lib32-libpipewire-1:1.4.4-1-x86_64.pkg.tar.zst
+      - lib32-pipewire-jack-1:1.4.4-1-x86_64.pkg.tar.zst
+      - lib32-pipewire-v4l2-1:1.4.4-1-x86_64.pkg.tar.zst
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: lib32
