--- a/system/udev/.artixlinux/pkgbase.yaml
+++ b/system/udev/.artixlinux/pkgbase.yaml
@@ -1,14 +1,4 @@
 ---
-pkgbase:
-  name: udev
-  version: 257.5-2
-  arch:
-    - x86_64
-  pkgname:
-    - udev
-    - libudev
-    - esysusers
-    - etmpfiles
 actions:
   addRepo: system
   removeRepo: system-gremlins
@@ -21,41 +11,53 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
-    version: 257.5-2
+    version: 257.6-1
     packages:
-      - udev-257.5-2-x86_64.pkg.tar.zst
-      - libudev-257.5-2-x86_64.pkg.tar.zst
-      - esysusers-257.5-2-x86_64.pkg.tar.zst
-      - etmpfiles-257.5-2-x86_64.pkg.tar.zst
+      - udev-257.6-1-x86_64.pkg.tar.zst
+      - libudev-257.6-1-x86_64.pkg.tar.zst
+      - esysusers-257.6-1-x86_64.pkg.tar.zst
+      - etmpfiles-257.6-1-x86_64.pkg.tar.zst
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: system
