--- a/world/dnscrypt-proxy/.artixlinux/pkgbase.yaml
+++ b/world/dnscrypt-proxy/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: dnscrypt-proxy
-  version: 2.1.8-1
-  arch:
-    - x86_64
-  pkgname:
-    - dnscrypt-proxy
 actions:
   addRepo: world
   removeRepo: null
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 2.1.8-1
+    version: 2.1.12-1
     packages:
-      - dnscrypt-proxy-2.1.8-1-x86_64.pkg.tar.zst
+      - dnscrypt-proxy-2.1.12-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
