--- a/world/python-gherkin/.artixlinux/pkgbase.yaml
+++ b/world/python-gherkin/.artixlinux/pkgbase.yaml
@@ -1,12 +1,5 @@
 ---
 team: world
-pkgbase:
-  name: python-gherkin
-  version: 32.1.1-1
-  arch:
-    - any
-  pkgname:
-    - python-gherkin
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -19,37 +12,49 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 32.1.1-1
+    version: 32.1.2-1
     packages:
-      - python-gherkin-32.1.1-1-any.pkg.tar.zst
+      - python-gherkin-32.1.2-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
