--- a/world/python-pytest-run-parallel/.artixlinux/pkgbase.yaml
+++ b/world/python-pytest-run-parallel/.artixlinux/pkgbase.yaml
@@ -1,12 +1,5 @@
 ---
 team: world
-pkgbase:
-  name: python-pytest-run-parallel
-  version: 0.4.2-1
-  arch:
-    - any
-  pkgname:
-    - python-pytest-run-parallel
 actions:
   addRepo: world
   removeRepo: null
@@ -19,37 +12,49 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 0.4.2-1
+    version: 0.4.3-1
     packages:
-      - python-pytest-run-parallel-0.4.2-1-any.pkg.tar.zst
+      - python-pytest-run-parallel-0.4.3-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
