--- a/lib32/lib32-curl/.artixlinux/pkgbase.yaml
+++ b/lib32/lib32-curl/.artixlinux/pkgbase.yaml
@@ -1,13 +1,4 @@
 ---
-pkgbase:
-  name: lib32-curl
-  version: 8.13.0-1
-  arch:
-    - x86_64
-  pkgname:
-    - lib32-curl
-    - lib32-libcurl-compat
-    - lib32-libcurl-gnutls
 actions:
   addRepo: lib32
   removeRepo: lib32-gremlins
@@ -20,40 +11,52 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
-    version: 8.13.0-1
+    version: 8.14.0-1
     packages:
-      - lib32-curl-8.13.0-1-x86_64.pkg.tar.zst
-      - lib32-libcurl-compat-8.13.0-1-x86_64.pkg.tar.zst
-      - lib32-libcurl-gnutls-8.13.0-1-x86_64.pkg.tar.zst
+      - lib32-curl-8.14.0-1-x86_64.pkg.tar.zst
+      - lib32-libcurl-compat-8.14.0-1-x86_64.pkg.tar.zst
+      - lib32-libcurl-gnutls-8.14.0-1-x86_64.pkg.tar.zst
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: lib32
