--- a/world/python-zeroconf/.artixlinux/pkgbase.yaml
+++ b/world/python-zeroconf/.artixlinux/pkgbase.yaml
@@ -29,9 +29,9 @@ repos:
     packages: []
     debug: []
   world:
-    version: 0.147.0-1
+    version: 0.147.0-2
     packages:
-      - python-zeroconf-0.147.0-1-any.pkg.tar.zst
+      - python-zeroconf-0.147.0-2-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
