--- a/world/python-zeroconf/PKGBUILD
+++ b/world/python-zeroconf/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=python-zeroconf
 pkgver=0.147.0
-pkgrel=1
+pkgrel=2
 pkgdesc="A pure python implementation of multicast DNS service discovery"
-arch=('any')
+arch=('x86_64')
 url="https://github.com/jstasiak/python-zeroconf"
 license=('LGPL-2.1-or-later')
 depends=('python' 'python-ifaddr')
