--- a/world/msmtp/.artixlinux/pkgbase.yaml
+++ b/world/msmtp/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: msmtp
-  version: 1.8.28-1
-  arch:
-    - x86_64
-  pkgname:
-    - msmtp
-    - msmtp-mta
 actions:
   addRepo: world
   removeRepo: null
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1.8.28-1
+    version: 1.8.29-1
     packages:
-      - msmtp-1.8.28-1-x86_64.pkg.tar.zst
-      - msmtp-mta-1.8.28-1-x86_64.pkg.tar.zst
+      - msmtp-1.8.29-1-x86_64.pkg.tar.zst
+      - msmtp-mta-1.8.29-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
