--- a/world/msmtp/.nvchecker.toml
+++ b/world/msmtp/.nvchecker.toml
@@ -1,5 +1,6 @@
 [msmtp]
 source = "git"
-git = "https://git.marlam.de/git/msmtp.git"
+#git = "https://git.marlam.de/git/msmtp.git"
+git = "https://github.com/marlam/msmtp.git"
 prefix = "msmtp-"
 exclude_regex = ".*(rel-|release-|start|1-4-19).*"
