--- a/world/noto-fonts/.artixlinux/pkgbase.yaml
+++ b/world/noto-fonts/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: noto-fonts
-  version: 1:2025.05.01-1
-  arch:
-    - any
-  pkgname:
-    - noto-fonts
-    - noto-fonts-extra
 actions:
   addRepo: world
   removeRepo: null
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1:2025.05.01-1
+    version: 1:2025.06.01-1
     packages:
-      - noto-fonts-1:2025.05.01-1-any.pkg.tar.zst
-      - noto-fonts-extra-1:2025.05.01-1-any.pkg.tar.zst
+      - noto-fonts-1:2025.06.01-1-any.pkg.tar.zst
+      - noto-fonts-extra-1:2025.06.01-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
