--- a/world/zig/.artixlinux/pkgbase.yaml
+++ b/world/zig/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: zig
-  version: 0.13.0-2
-  arch:
-    - x86_64
-  pkgname:
-    - zig
 actions:
   addRepo: world
   removeRepo: null
@@ -18,39 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
-    version: 0.13.0-2
-    packages:
-      - zig-0.13.0-2-x86_64.pkg.tar.zst
+    version: null
+    packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 0.13.0-2
+    version: 0.14.1-1
     packages:
-      - zig-0.13.0-2-x86_64.pkg.tar.zst
+      - zig-0.14.1-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
