--- a/world/docker/.artixlinux/pkgbase.yaml
+++ b/world/docker/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: docker
-  version: 1:28.1.1-1
-  arch:
-    - x86_64
-    - aarch64
-  pkgname:
-    - docker
 actions:
   addRepo: world
   removeRepo: null
@@ -19,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1:28.1.1-1
+    version: 1:28.2.0-1
     packages:
-      - docker-1:28.1.1-1-x86_64.pkg.tar.zst
+      - docker-1:28.2.0-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
