--- a/world/libffado/.artixlinux/pkgbase.yaml
+++ b/world/libffado/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -29,9 +29,9 @@ repos:
     packages: []
     debug: []
   world:
-    version: 2.4.9-3
+    version: 2.4.9-4
     packages:
-      - libffado-2.4.9-3-x86_64.pkg.tar.zst
+      - libffado-2.4.9-4-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
