--- a/lib32/lib32-spirv-llvm-translator/.artixlinux/pkgbase.yaml
+++ b/lib32/lib32-spirv-llvm-translator/.artixlinux/pkgbase.yaml
@@ -1,13 +1,6 @@
 ---
-pkgbase:
-  name: lib32-spirv-llvm-translator
-  version: 19.1.7-1
-  arch:
-    - x86_64
-  pkgname:
-    - lib32-spirv-llvm-translator
 actions:
-  addRepo: lib32
+  addRepo: lib32-goblins
   removeRepo: null
   triggersBuild: true
   triggersRebuild: false
@@ -18,38 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
-    version: null
-    packages: []
+    version: 19.1.7-1
+    packages:
+      - lib32-spirv-llvm-translator-19.1.7-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: 19.1.7-1
     packages:
       - lib32-spirv-llvm-translator-19.1.7-1-x86_64.pkg.tar.zst
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: lib32
