--- a/world/vc-intrinsics/.artixlinux/pkgbase.yaml
+++ b/world/vc-intrinsics/.artixlinux/pkgbase.yaml
@@ -1,55 +1,61 @@
 ---
-pkgbase:
-  name: vc-intrinsics
-  version: 0.22.1-1
-  arch:
-    - x86_64
-  pkgname:
-    - vc-intrinsics
 actions:
-  addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  addRepo: world-goblins
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
-    version: null
-    packages: []
+    version: 0.22.1-1
+    packages:
+      - vc-intrinsics-0.22.1-1-x86_64.pkg.tar.zst
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: 0.22.1-1
     packages:
       - vc-intrinsics-0.22.1-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
