--- a/world/wasi-compiler-rt/.artixlinux/pkgbase.yaml
+++ b/world/wasi-compiler-rt/.artixlinux/pkgbase.yaml
@@ -1,55 +1,61 @@
 ---
-pkgbase:
-  name: wasi-compiler-rt
-  version: 19.1.6-1
-  arch:
-    - any
-  pkgname:
-    - wasi-compiler-rt
 actions:
-  addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  addRepo: world-goblins
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
-    version: null
-    packages: []
+    version: 19.1.6-1
+    packages:
+      - wasi-compiler-rt-19.1.6-1-any.pkg.tar.zst
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: 19.1.6-1
     packages:
       - wasi-compiler-rt-19.1.6-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
