--- a/world/wasi-libcplusplus/.artixlinux/pkgbase.yaml
+++ b/world/wasi-libcplusplus/.artixlinux/pkgbase.yaml
@@ -1,57 +1,63 @@
 ---
-pkgbase:
-  name: wasi-libc++
-  version: 19.1.6-2
-  arch:
-    - any
-  pkgname:
-    - wasi-libc++
-    - wasi-libc++abi
 actions:
-  addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  addRepo: world-goblins
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
-    version: null
-    packages: []
+    version: 19.1.6-2
+    packages:
+      - wasi-libc++-19.1.6-2-any.pkg.tar.zst
+      - wasi-libc++abi-19.1.6-2-any.pkg.tar.zst
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: 19.1.6-2
     packages:
       - wasi-libc++-19.1.6-2-any.pkg.tar.zst
       - wasi-libc++abi-19.1.6-2-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
